src/test/deca/codegen/invalid/divfloat0.deca
// Description:
//    Division d'un float par 0
//
// Resultats:
//    Erreur : Une opération a dépassé la capacité maximale des flottants.
//

{
   float i = 5.2;
   i = i/0;
}

